correct email input

--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@
                 <form class="contact__form">
                     <div class="contact__inputs">
                         <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
+                        <input type="email" placeholder="Email" class="contact__input">
                     </div>
 
                     <input type="text" placeholder="Project" class="contact__input">
 
-                    <textarea cols="30" rows="0" placeholder="Message" class="contact__input"></textarea>
+                    <textarea cols="30" rows="10" placeholder="Message" class="contact__input"></textarea>
 
                     <input type="submit" value="Send Message" class="button contact__button">
                 </form>
