site css to sass

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--===== HEADER =====-->
     <header class="l-header">
-        <nav class="nav bd-grid">
+        <nav class="nav">
             <div id="nav-toggle" class="nav__toggle">
                 <i class="bx bx-menu"></i>
             </div>
@@ -63,7 +63,7 @@
                         <a href="#" class="home__social-link"><i class="bx bxl-behance"></i></a>
                     </div>
 
-                    <a download="" href="#" class="button home__button">Download Resume</a>
+                    <a download="" href="img/Javohir's Resume.pdf" class="button home__button">Download Resume</a>
                 </div>
             </div>
         </section>
@@ -304,7 +304,7 @@
         </section>
 
         <!--===== PROJECT IN MIND =====-->
-        <section class="project section" id="works">
+        <section class="project section">
             <div class="project__container bd-grid">
                 <div class="project__data">
                     <h2 class="section-title project__title">Do you have a project in mind</h2>
