--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <!-- ===== CSS ===== -->
-   <link rel="stylesheet" href="css/styles.css">
+   <link rel="stylesheet" href="css/main.css">
 
    <!-- ===== BOX ICONS ===== -->
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
